# nes-emulator

./: APU.cpp  APU.h  CMakeLists.txt  CPU.cpp  CPU.h  Cartucho.cpp  Cartucho.h  Joypad.cpp  Joypad.h  Mapper.cpp  Mapper.h  Mapper0.cpp  Mapper0.h  PPU.cpp  PPU.h  PPUCopy.cpp  Pulse.cpp  Pulse.h  Screen.cpp  Screen.h  Sound_Queue.cpp  blargg_common.h  disasm6.php  main.cpp  mos6502.cpp  mos6502.h  nestest.asm  pallete.inc  saida.txt
